--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter:
     sdk: flutter
   go_router: ^12.1.1
+  flutter_dotenv: ^5.0.2
   dio: ^5.0.0
   intl: ^0.17.0
   http: ^0.13.4
@@ -40,3 +41,4 @@ flutter:
   assets:
     - assets/
     - assets/images/
+    
